--- a/smacofBS/smacofBS.tex
+++ b/smacofBS/smacofBS.tex
@@ -194,9 +194,9 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{Smacof at 50: A Manual\\
-Part 1: Smacof with B-Splines}
+Part 3: Non-linear Smacof with B-Spline Transformation}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started February 21 2024, Version of April 16, 2024}
+\date{Started February 21 2024, Version of April 21, 2024}
 
 \begin{document}
 \maketitle
