--- a/smacofAC/smacofAC.tex
+++ b/smacofAC/smacofAC.tex
@@ -121,7 +121,7 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{Smacof at 50: A Manual\\
-Part 5: Unfolding in Smacof}
+Part 2: Metric Smacof with Additive Constant}
 \author{Jan de Leeuw - University of California Los Angeles}
 \date{Started December 12 2022, Version of April 21, 2024}
 
@@ -137,28 +137,8 @@ TBD
 }
 \textbf{Note:} This is a working paper which will be expanded/updated frequently. All suggestions for improvement are welcome.
 
-\section{Elegant}\label{elegant}
+\section{Introduction}\label{introduction}
 
-\[
-\sigma(C)=\sigma(\tilde C+(C-\tilde C))=\sum_{i=1}^n\sum_{j=1}^m((\delta_{ij}^2-\text{tr}\ A_{ij}\tilde C)-\text{tr}\ A_{ij}(C-\tilde C))^2
-\]
-\[
-\sigma(C)=\sigma(\tilde C)-2\sum_{i=1}^n\sum_{j=1}^m(\delta_{ij}^2-\text{tr}\ A_{ij}\tilde C)\text{tr}\ A_{ij}(C-\tilde C)+\sum_{i=1}^n\sum_{j=1}^m\{\text{tr}\ A_{ij}(C-\tilde C)\}^2
-\]
-
-From (\textbf{deleeuw\_groenen\_pietersz?})
-\[
-\sum_{i=1}^n\sum_{j=1}^m\{\text{tr}\ A_{ij}(C-\tilde C)\}^2\leq (n+m+2)\text{tr}\ (C-\tilde C)^2
-\]
-Define
-\[
-B(\tilde C):=\frac{1}{n+m+2}\sum_{i=1}^n\sum_{j=1}^m(\delta_{ij}^2-\text{tr}\ A_{ij}\tilde C)A_{ij}
-\]
-So we minimize
-\[
--2\ \text{tr}\ B(\tilde C)C+\text{tr}\ C^2-2\text{tr}\ C\tilde C=\\
-\text{tr}\ (C-\{\tilde C + B(\tilde C)\})^2
-\]
-\# References
+\section{References}\label{references}
 
 \end{document}
