--- a/smacofNM/smacofNM.Rmd
+++ b/smacofNM/smacofNM.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 2: Non-metric Smacof
+    | Part 4: Non-metric Smacof
 author: 
 - Jan de Leeuw - University of California Los Angeles
 date: '`r paste("Started March 30 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
@@ -38,10 +38,9 @@ suppressPackageStartupMessages(library(tinytex, quietly = TRUE))
 **Note:** This is a working manuscript which will be expanded/updated
 frequently. All suggestions for improvement are welcome. All Rmd, tex,
 html, pdf, R, and C files are in the public domain. Attribution will be
-appreciated, but is not required. The code files can be found at
-<https://github.com/deleeuw/smacofCode>, the manual files at
-<https://github.com/deleeuw/smacofManual>, and the example files
-at <https://github.com/deleeuw/smacofExamples>.
+appreciated, but is not required. The files can be found at
+<https://github.com/deleeuw> in the repositories smacofCode, smacofManual,
+and smacofExamples.
 
 \sectionbreak
 
